# ChineseSchoolFetch

./: .gitignore  pyproject.toml
src/: fetch.py  file.py  main.py
src/scheme/: common.py  school_code.py  school_info.py  school_special.py
